--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,6 +10,7 @@
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
+  margin-top: 4em;
 }
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
@@ -50,7 +51,8 @@ body {
   background-image: url('./assets/background.png'); 
   background-size: cover;
   background-position: center; 
-   background-repeat: no-repeat;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .blur-background {
@@ -124,6 +126,15 @@ body {
 .liked-movies{
   color:white;
 }
+
+.movie-poster {
+  width: 420px;
+  object-fit: cover;
+  border-radius: 8px;
+  margin-bottom: 10px;
+  background: #e3f0ff;
+}
+
 .liked-movies-list {
   background: rgba(30, 40, 60, 0.35);
   border: none;
