--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -1,14 +1,12 @@
 .app-header {
-  position: fixed;
-  top: 0; 
-  left: 0; 
-  right: 0; 
-  display: flex; 
-  justify-content: space-between;
-  align-items: center; 
-  padding: 10px 60px; 
-  background-color: rgba(0, 0, 0, 0.5);
-  backdrop-filter: blur(10px); 
-  color: white; 
-  z-index: 1000; 
+	position: sticky;
+	top: 0;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 10px;
+	background-color: rgba(0, 0, 0, 0.5);
+	backdrop-filter: blur(10px);
+	color: white;
+	z-index: 1000;
 }
